Fix font shifts on resize

--- a/static/css/columns.css
+++ b/static/css/columns.css
@@ -23,6 +23,16 @@
     flex-shrink: 0;
 }
 
-.column-right{
+.column-right {
+    width: 100%;
+}
+
+.column-left-recs {
+    width: 100px;
+    height: 100%;
+    flex-shrink: 0;
+}
+
+.column-right-recs {
     width: 100%;
 }
